--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "build": "webpack",
         "build:prod": "webpack --mode production",
         "lint": "eslint src",
-        "lint:fix": "eslint src --ext .js,.jsx --fix"
+        "lint:fix": "npm run lint --ext .js,.jsx --fix",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d public"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@babel/eslint-parser": "^7.19.1",
         "@babel/preset-typescript": "^7.18.6",
+        "bootstrap": "^5.2.2",
         "eslint-config-prettier": "^8.5.0",
         "eslint-webpack-plugin": "^3.2.0",
         "react": "^18.2.0",
