--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
         "lint": "eslint src",
         "lint:fix": "npm run lint --ext .js,.jsx --fix",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d public"
+        "deploy": "gh-pages -d public",
+        "lint-staged": "lint-staged --config lint-staged.js",
+        "husky-install": "husky install"
     },
     "author": "",
     "license": "ISC",
@@ -47,11 +49,14 @@
         "eslint": "^8.27.0",
         "eslint-plugin-react": "^7.31.10",
         "gh-pages": "^4.0.0",
+        "husky": "^8.0.2",
+        "lint-staged": "^13.0.3",
         "prettier": "^2.7.1",
         "react-refresh": "^0.14.0",
         "react-refresh-webpack-plugin": "^0.1.0",
         "style-loader": "^3.3.1",
-        "ts-loader": "^9.4.1"
+        "ts-loader": "^9.4.1",
+        "tsc-files": "^1.1.3"
     },
     "browserslist": "defaults and supports es6-module",
     "homepage": "https://ivdim1992.github.io/react-from-scratch"
